--- a/hevort/euclid.cfg
+++ b/hevort/euclid.cfg
@@ -73,11 +73,11 @@
 pin: ^zboard:P0.10
 x_offset: 0
 y_offset: 30.0
-z_offset: 3.950
+z_offset: 3.9
 speed: 5
-samples: 5
+samples: 3
 samples_result: median
-sample_retract_dist: 2.0
+sample_retract_dist: 5.0
 samples_tolerance: 0.050
 samples_tolerance_retries: 3
 lift_speed: 30
@@ -94,14 +94,16 @@ lift_speed: 30
 axes: z
 set_position_z: 0
 gcode:
+   STATUS_HOMING
    G90
    G1 Z20 F600
    G28 X Y
    M401
-   G1 X250 Y250 F30000
+   G1 X250 Y250 F18000
    G28 Z
    G1 Z20 F600
-   PROBE_PARK_LATER
+   G1 X10 Y10 F18000
+   STATUS_READY
 
 # Macro to Deploy Bed Probe
 [gcode_macro M401]
@@ -150,10 +152,12 @@ gcode:
 # Macro to retract Bed Probe
 [gcode_macro M402]
 gcode:
+    STATUS_BUSY
     QUERY_PROBE                 ; check probe status
     {action_respond_info("Entering M402")}
-    ; error_if_probe_not_deployed
+    ;error_if_probe_not_deployed
     _M402
+    STATUS_READY
 
 # Macro to Stow Bed Leveling Probe
 [gcode_macro _M402]
@@ -167,26 +171,108 @@ gcode:
       _approach_dock
     {% endif %}                     ;  exit the if-then loop. was missing in previous versions
     error_if_probe_deployed         ;  verify that the probe is detached. is corrected error  
-    UPDATE_DELAYED_GCODE ID=PROBE_PARK_LATER_TICK DURATION=0
     {action_respond_info("Exiting M402")}
 
 # Definition of bed_mesh
 [bed_mesh]
-speed: 500
-mesh_min: 50,50
-mesh_max: 475,475
+speed: 300
+mesh_min: 25,25
+mesh_max: 500,475
 probe_count: 6,6
 fade_start: 1.0
-fade_end: 4.0
-horizontal_move_z: 20
+fade_end: 0.0
+horizontal_move_z: 10
 
 # Macro to perform a bed mesh calibration by wrapping it between M401/M402 macros
 [gcode_macro BED_MESH_CALIBRATE]
-rename_existing:    BED_MESH_CALIBRATE_ORIGINAL
+rename_existing: BED_MESH_CALIBRATE_BASE
+; gcode parameters
+variable_parameter_AREA_START : 25,25
+variable_parameter_AREA_END : 500,475
+; the clearance between print area and probe area 
+variable_mesh_area_offset : 5.0
+; number of sample per probe point
+variable_probe_samples : 3
+; minimum probe count
+variable_min_probe_count : 3
+; scale up the probe count, should be 1.0 ~ < variable_max_probe_count/variable_min_probe_count
+variable_probe_count_scale_factor : 1.0
 gcode:
+  STATUS_MESHING
   M401                           ; deploy Euclid Probe if needed
-  BED_MESH_CALIBRATE_ORIGINAL    ; check bed level
-  PROBE_PARK_LATER
+  {% if params.AREA_START and params.AREA_END %}
+    {% set bedMeshConfig = printer["configfile"].config["bed_mesh"] %}
+    {% set safe_min_x = bedMeshConfig.mesh_min.split(",")[0]|float %}
+    {% set safe_min_y = bedMeshConfig.mesh_min.split(",")[1]|float %}
+    {% set safe_max_x = bedMeshConfig.mesh_max.split(",")[0]|float %}
+    {% set safe_max_y = bedMeshConfig.mesh_max.split(",")[1]|float %}
+
+    {% set area_min_x = params.AREA_START.split(",")[0]|float %}
+    {% set area_min_y = params.AREA_START.split(",")[1]|float %}
+    {% set area_max_x = params.AREA_END.split(",")[0]|float %}
+    {% set area_max_y = params.AREA_END.split(",")[1]|float %}
+
+    {% if bedMeshConfig.probe_count.split(",")|length == 2 %}
+      {% set meshPointX = bedMeshConfig.probe_count.split(",")[0]|int %}
+      {% set meshPointY = bedMeshConfig.probe_count.split(",")[1]|int %}
+    {% else %}
+      {% set meshPointX = bedMeshConfig.probe_count.split(",")[0]|int %}
+      {% set meshPointY = bedMeshConfig.probe_count.split(",")[0]|int %}
+    {% endif %}
+
+    {% set meshMaxPointX = meshPointX %}
+    {% set meshMaxPointY = meshPointY %}
+
+
+    {% if (area_min_x < area_max_x) and (area_min_y < area_max_y) %}
+      {% if area_min_x - mesh_area_offset >=  safe_min_x %}
+        {% set area_min_x = area_min_x - mesh_area_offset %}
+      {% else %}
+        {% set area_min_x = safe_min_x %}
+      {% endif %}
+
+      {% if area_min_y - mesh_area_offset >=  safe_min_y %}
+        {% set area_min_y = area_min_y - mesh_area_offset %}
+      {% else %}
+        {% set area_min_y = safe_min_y %}
+      {% endif %}
+
+      {% if area_max_x + mesh_area_offset <=  safe_max_x %}
+        {% set area_max_x = area_max_x + mesh_area_offset %}
+      {% else %}
+        {% set area_max_x = safe_max_x %}
+      {% endif %}
+
+      {% if area_max_y + mesh_area_offset <=  safe_max_y %}
+        {% set area_max_y = area_max_y + mesh_area_offset %}
+      {% else %}
+        {% set area_max_y = safe_max_y %}
+      {% endif %}
+
+      {% set meshPointX = (meshPointX * (area_max_x - area_min_x) / (safe_max_x - safe_min_x) * probe_count_scale_factor)|round(0)|int %}
+      {% if meshPointX < min_probe_count %}
+        {% set meshPointX = min_probe_count %}
+      {% endif %}
+      {% if meshPointX > meshMaxPointX %}
+        {% set meshPointX = meshMaxPointX %}
+      {% endif %}
+
+      {% set meshPointY = (meshPointY * (area_max_y -area_min_y ) / (safe_max_y - safe_min_y) * probe_count_scale_factor )|round(0)|int %}
+      {% if meshPointY < min_probe_count %}
+        {% set meshPointY = min_probe_count %}
+      {% endif %}
+      {% if meshPointY > meshMaxPointY %}
+        {% set meshPointY = meshMaxPointY %}
+      {% endif %}
+
+      BED_MESH_CALIBRATE_BASE mesh_min={area_min_x},{area_min_y} mesh_max={area_max_x},{area_max_y} probe_count={meshPointX},{meshPointY} samples={probe_samples|int}
+    {% else %}
+      BED_MESH_CALIBRATE_BASE
+    {% endif %}
+  {% else %}
+    BED_MESH_CALIBRATE_BASE
+  {% endif %}
+  STATUS_READY
 
 # Definition of z_tilt
 [z_tilt]
@@ -195,21 +281,22 @@ z_positions:
   274.339,557.81
   575.548,-20.4
 points:
-	50,50
-	294.5,475
-	475,50
-speed: 500
+	5,5
+	262.5,475
+	520,5
+speed: 300
 horizontal_move_z: 20
 retries: 3
-retry_tolerance: 0.5
+retry_tolerance: 0.1
 
 # Macro to perform a modified z_tilt by wrapping it between M401/M402 macros
 [gcode_macro Z_TILT_ADJUST]
 rename_existing:    Z_TILT_ADJUST_ORIGINAL
 gcode:
+  STATUS_CALIBRATING_Z
   M401                           ; deploy Euclid Probe if needed
   Z_TILT_ADJUST_ORIGINAL         ; check bed level
-  PROBE_PARK_LATER
+  STATUS_READY
 
 #### Positions for probe deploy 
 [gcode_macro _approach_dock]
@@ -237,32 +324,3 @@ gcode:
       G1 X523 Y532 F1800 
       M400
 
-### Section for delayed probe parking ###
-[respond]
-
-[gcode_macro PROBE_CONFIG]
-variable_ticks: 0
-variable_reset_ticks: 10
-variable_delay_ticks: 10
-gcode:
-  RESPOND PREFIX="info" MSG="Probe > Config ..."
-
-[gcode_macro PROBE_PARK_LATER]
-gcode:
-  RESPOND PREFIX="info" MSG="Probe > Park Later > Restart Timer to {printer['gcode_macro PROBE_CONFIG'].reset_ticks}"
-  SET_GCODE_VARIABLE MACRO=PROBE_CONFIG VARIABLE=ticks VALUE={printer['gcode_macro PROBE_CONFIG'].reset_ticks}
-  UPDATE_DELAYED_GCODE ID=PROBE_PARK_LATER_TICK DURATION={printer['gcode_macro PROBE_CONFIG'].delay_ticks}
-  QUERY_PROBE
-
-[delayed_gcode PROBE_PARK_LATER_TICK]
-initial_duration: 0
-gcode:
-  SET_GCODE_VARIABLE MACRO=PROBE_CONFIG VARIABLE=ticks VALUE={printer['gcode_macro PROBE_CONFIG'].ticks - 1}
-  {% if printer['gcode_macro PROBE_CONFIG'].ticks <=1 %}
-    RESPOND PREFIX="info" MSG="Probe > Park Later > Ticking limits reached, parking probe..."
-    M402
-  {% else %}
-    ## tick one more time
-    RESPOND PREFIX="info" MSG="Probe > Park Later > Ticking - {printer['gcode_macro PROBE_CONFIG'].ticks - 1}"
-    UPDATE_DELAYED_GCODE ID=PROBE_PARK_LATER_TICK DURATION={printer['gcode_macro PROBE_CONFIG'].delay_ticks}
-  {% endif %}
