--- a/hevort/extruder.cfg
+++ b/hevort/extruder.cfg
@@ -10,8 +10,8 @@ gear_ratio: 50:10
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: HE0
-#sensor_type: ATC Semitec 104GT-2
-sensor_type: PT1000
+sensor_type: ATC Semitec 104GT-2
+#sensor_type: PT1000
 sensor_pin: TH0
 pressure_advance: 0.060
 control = pid
@@ -21,7 +21,7 @@ pid_Kd = 83.653
 smooth_time: 2
 min_extrude_temp: 170
 min_temp: 10
-max_temp: 450
+max_temp: 280
 max_extrude_only_distance: 110
 
 [tmc2209 extruder]
