--- a/hevort/macros.cfg
+++ b/hevort/macros.cfg
@@ -4,28 +4,52 @@
 gcode:
     {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
+    {% set BED_SIZE = params.BED_SIZE|default(4)|float|round(1) %}
+    ; gcode parameters for area bed mesh
+    variable_parameter_AREA_START : 0,0
+    variable_parameter_AREA_END : 0,0
     # Reset the G-Code Z offset (adjust Z offset if needed)
     SET_GCODE_OFFSET Z=0.0
     # use absolute coordinates
     G90
     # extruder relative mode
     M83 
+    # clear mesh
+    BED_MESH_CLEAR
+
     # SET_HEATER_TEMPERATURE 
-    M104 S160 ; set extruder temp
-    M140 S{BED_TEMP}; set bed temp
+    {% if BED_SIZE == 4 %}
+    SET_HEATER_TEMPERATURE HEATER=heater_bed3 TARGET={BED_TEMP}
+    {% endif %}
+    {% if BED_SIZE >= 3 %}
+    SET_HEATER_TEMPERATURE HEATER=heater_bed2 TARGET={BED_TEMP}
+    {% endif %}
+    {% if BED_SIZE >= 2 %}
+    SET_HEATER_TEMPERATURE HEATER=heater_bed1 TARGET={BED_TEMP}
+    {% endif %}
+    {% if BED_SIZE >= 1 %}
+    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={BED_TEMP}
+    {% endif %}
+
+    SET_HEATER_TEMPERATURE HEATER=extruder TARGET=160; set extruder preheat temp
+
     M117 Homing
     G28
-    M117 Waiting for Bed
+    M117 Bed Heating
     M190 S{BED_TEMP} ; wait for bed temp
     M117 Bed Tilt
     Z_TILT_ADJUST
+    M117 Bed Mesh
+    BED_MESH_CALIBRATE ;AREA_START={params.AREA_START|default("0,0")} AREA_END={params.AREA_END|default("0,0")}
     M104 S{EXTRUDER_TEMP} ; wait for extruder temp
+    M117 Homing
     G28
     M402
     M117 Waiting for Extruder
     M109 S{EXTRUDER_TEMP} ; wait for extruder temp
     # Prime line routine
     M117 Prime line
+    STATUS_PRINTING
     G1 X0 Y0 F18000.0;  move to start
     G0 Z0.3 ; Restore nozzle position
     G92 E0.0 ; reset extrusion distance
@@ -42,6 +66,7 @@ gcode:
     G92 E0.0 ; reset extrusion distance
     ; Final print adjustments
     M117 Printing
+    STATUS_PRINTING
 
 [gcode_macro END_PRINT]
 gcode:
@@ -59,3 +84,16 @@ gcode:
     G1 X0 Y500 F18000
     # Disable steppers
     M84
+    STATUS_OFF
+
+[gcode_macro PREHEAT]
+gcode:
+    M117 Preheating
+    STATUS_HEATING
+    {% set BED_TEMP = params.BED_TEMP|default(110)|float %}
+    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(160)|float %}
+    SET_HEATER_TEMPERATURE HEATER=heater_bed3 TARGET={BED_TEMP}
+    SET_HEATER_TEMPERATURE HEATER=heater_bed2 TARGET={BED_TEMP}
+    SET_HEATER_TEMPERATURE HEATER=heater_bed1 TARGET={BED_TEMP}
+    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={BED_TEMP}
+    SET_HEATER_TEMPERATURE HEATER=extruder TARGET={EXTRUDER_TEMP}
