--- a/hevort/printer.cfg
+++ b/hevort/printer.cfg
@@ -19,12 +19,17 @@
 serial: /dev/serial/by-id/usb-Klipper_lpc1769_04B0001722813AAFC2386A5CC22000F5-if00
 restart_method: command
 
+[mcu rpi]
+serial: /tmp/klipper_host_mcu
+
 # import x and y axis
 [include servos.cfg]
 # import extruder
 [include extruder.cfg]
 # import bed
 [include bed.cfg]
+# import neopixel
+[include neopixel.cfg]
 
 [printer]
 kinematics: corexy
@@ -39,9 +44,12 @@ max_z_accel: 20
 
 [fan]
 pin: LED
-cycle_time: 0.0001 # for CPAP
+max_power: 1
+cycle_time: 0.0001# for CPAP
+hardware_pwm: false
+shutdown_speed: 0
 
-[heater_fan nozzle_fan]
+[heater_fan coldend_fan]
 pin: FAN0
 heater: extruder
 heater_temp: 50.0
@@ -68,3 +76,19 @@ menu_timeout: 10
 pin: EXP1_1
 value: 0
 shutdown_value: 0
+
+########################################
+# chamber temp
+########################################
+
+[temperature_sensor chamber]
+sensor_type: ATC Semitec 104GT-2
+sensor_pin: TH1
+#min_temp:
+#max_temp:
+#   See the "extruder" section for the definition of the above
+#   parameters.
+#gcode_id:
+#   See the "heater_generic" section for the definition of this
+#   parameter.
+
