--- a/hevort/bed_heater.cfg
+++ b/hevort/bed_heater.cfg
@@ -15,7 +15,7 @@ max_temp: 130
 [heater_generic heater_bed1]
 # front right
 gcode_id: B1
-heater_pin: zboard:P2.7
+heater_pin: HE1
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: P0.25
 control = pid
