--- a/hevort/bed_stepper.cfg
+++ b/hevort/bed_stepper.cfg
@@ -2,7 +2,7 @@
 
 [stepper_z]
 step_pin: zboard:P2.2
-dir_pin: zboard:P2.6
+dir_pin: !zboard:P2.6
 enable_pin: !zboard:P2.1
 microsteps: 16
 rotation_distance: 4 				
@@ -23,7 +23,7 @@ hold_current: 0.750
 
 [stepper_z1]
 step_pin: zboard:P0.19
-dir_pin: zboard:P0.20
+dir_pin: !zboard:P0.20
 enable_pin: !zboard:P2.8
 microsteps: 16
 rotation_distance: 4 				
@@ -38,7 +38,7 @@ hold_current: 0.750
 
 [stepper_z2]
 step_pin: zboard:P0.22
-dir_pin: zboard:P2.11
+dir_pin: !zboard:P2.11
 enable_pin: !zboard:P0.21
 microsteps: 16
 rotation_distance: 4 				
