replaced zboard with rpfmex and klipper_expander

--- a/hevort/euclid.cfg
+++ b/hevort/euclid.cfg
@@ -70,17 +70,17 @@
 #
 
 [probe]
-pin: ^zboard:P0.10
+pin: P0.10
 x_offset: 0
 y_offset: 30.0
-z_offset: 3.9
+z_offset: 5.67
 speed: 5
 samples: 3
 samples_result: median
-sample_retract_dist: 5.0
+sample_retract_dist: 2.0
 samples_tolerance: 0.050
 samples_tolerance_retries: 3
-lift_speed: 30
+lift_speed: 50
 
 #
 # example homing overide to use Euclid as an endstop and Z-probe
@@ -96,13 +96,12 @@ set_position_z: 0
 gcode:
    STATUS_HOMING
    G90
-   G1 Z20 F600
+   G1 Z20 F3000
    G28 X Y
    M401
-   G1 X250 Y250 F18000
-   G28 Z
-   G1 Z20 F600
    G1 X10 Y10 F18000
+   G28 Z
+   G1 Z20 F3000
    STATUS_READY
 
 # Macro to Deploy Bed Probe
@@ -302,7 +301,7 @@ gcode:
 [gcode_macro _approach_dock]
 gcode:
       G90
-      G1 Z20 F600                 ;  set approach elevation of Z20 to clear probe over bed on fixed gantry machine
+      G1 Z20 F3000                 ;  set approach elevation of Z20 to clear probe over bed on fixed gantry machine
       G1 X463 Y472 F30000         ;  move the carraige to safe position to move from
       M400
 
