--- a/hevort/printer.cfg
+++ b/hevort/printer.cfg
@@ -19,6 +19,14 @@
 serial: /dev/serial/by-id/usb-Klipper_lpc1769_04B0001722813AAFC2386A5CC22000F5-if00
 restart_method: command
 
+[mcu expander]
+serial: /dev/serial/by-id/usb-Klipper_stm32f042x6_01001F001443303054313620-if00
+restart_method: command
+
+[mcu rpfmex]
+serial: /dev/serial/by-id/usb-Klipper_rp2040_E66138935F207B29-if00
+restart_method: command
+
 [mcu rpi]
 serial: /tmp/klipper_host_mcu
 
@@ -36,7 +44,7 @@ kinematics: corexy
 max_velocity: 1000
 max_accel: 10000
 max_z_velocity: 50
-max_z_accel: 20
+max_z_accel: 100
 
 ########################################
 # Fan configuration
@@ -81,9 +89,9 @@ shutdown_value: 0
 # chamber temp
 ########################################
 
-[temperature_sensor chamber]
-sensor_type: ATC Semitec 104GT-2
-sensor_pin: TH1
+#[temperature_sensor chamber]
+#sensor_type: ATC Semitec 104GT-2
+#sensor_pin: TH1
 #min_temp:
 #max_temp:
 #   See the "extruder" section for the definition of the above
