--- a/hevort/bed_heater.cfg
+++ b/hevort/bed_heater.cfg
@@ -2,9 +2,9 @@
 
 [heater_bed] 
 # front left
-heater_pin: zboard:P2.4
+heater_pin: expander:PA1
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: zboard:P0.25
+sensor_pin: TB0
 control = pid
 pid_kp = 65.863
 pid_ki = 0.900
@@ -15,9 +15,9 @@ max_temp: 130
 [heater_generic heater_bed1]
 # front right
 gcode_id: B1
-heater_pin: HE1
+heater_pin: expander:PA2
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: P0.25
+sensor_pin: expander:PA5
 control = pid
 pid_kp = 65.863
 pid_ki = 0.900
@@ -28,9 +28,9 @@ max_temp: 130
 [heater_generic heater_bed2]
 # rear right
 gcode_id: B2
-heater_pin: zboard:P2.5
+heater_pin: expander:PA3
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: zboard:P0.23
+sensor_pin: TH1
 control = pid
 pid_kp = 65.863
 pid_ki = 0.900
@@ -41,9 +41,9 @@ max_temp: 130
 [heater_generic heater_bed3]
 # rear left
 gcode_id: B3
-heater_pin: P2.5
+heater_pin: expander:PA0
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: zboard:P0.24
+sensor_pin: expander:PA6
 control = pid
 pid_kp = 65.863
 pid_ki = 0.900
