--- a/hevort/bed_stepper.cfg
+++ b/hevort/bed_stepper.cfg
@@ -1,9 +1,9 @@
 # Tripple Z on virtual endstop
 
 [stepper_z]
-step_pin: zboard:P2.2
-dir_pin: !zboard:P2.6
-enable_pin: !zboard:P2.1
+step_pin: rpfmex:gpio6
+dir_pin: !rpfmex:gpio5
+enable_pin: !rpfmex:gpio9
 microsteps: 16
 rotation_distance: 4 				
 full_steps_per_rotation: 200
@@ -15,38 +15,38 @@ homing_speed: 10
 homing_retract_speed: 5
 second_homing_speed: 2.5
 
-[tmc2208 stepper_z]
-uart_pin: zboard:P1.10
+[tmc2209 stepper_z]
+uart_pin: rpfmex:gpio7
 run_current: 1.000
 hold_current: 0.750
 #stealthchop_threshold: 1000
 
 [stepper_z1]
-step_pin: zboard:P0.19
-dir_pin: !zboard:P0.20
-enable_pin: !zboard:P2.8
+step_pin: rpfmex:gpio1
+dir_pin: !rpfmex:gpio0
+enable_pin: !rpfmex:gpio4
 microsteps: 16
 rotation_distance: 4 				
 full_steps_per_rotation: 200
 #gear_ratio: 5.18:1
 
-[tmc2208 stepper_z1]
-uart_pin: zboard:P1.9
+[tmc2209 stepper_z1]
+uart_pin: rpfmex:gpio2
 run_current: 1.000
 hold_current: 0.750
 #stealthchop_threshold: 1000
 
 [stepper_z2]
-step_pin: zboard:P0.22
-dir_pin: !zboard:P2.11
-enable_pin: !zboard:P0.21
+step_pin: rpfmex:gpio22
+dir_pin: rpfmex:gpio21
+enable_pin: !rpfmex:gpio25
 microsteps: 16
 rotation_distance: 4 				
 full_steps_per_rotation: 200
 #gear_ratio: 5.18:1
 
-[tmc2208 stepper_z2]
-uart_pin: zboard:P1.8
+[tmc2209 stepper_z2]
+uart_pin: rpfmex:gpio23
 run_current: 1.000
 hold_current: 0.750
 #stealthchop_threshold: 1000
