--- a/hevort/neopixel.cfg
+++ b/hevort/neopixel.cfg
@@ -1,7 +1,7 @@
 # Based on https://github.com/VoronDesign/Voron-Afterburner/blob/sb-beta/Klipper_Macros/stealthburner_leds.cfg
 
 [neopixel hvt_leds]
-pin: zboard:P1.24
+pin: rpfmex:gpio10
 #   The pin connected to the neopixel. This parameter must be provided.
 chain_count: 44
 #   The number of Neopixel chips that are "daisy chained" to the
