remounted BLT and Volcano

--- a/hevort/bed.cfg
+++ b/hevort/bed.cfg
@@ -2,8 +2,9 @@
 ############################ Z Axis ################################
 ####################################################################
 
-# import euclid
-[include euclid.cfg]
+# import probe
+#[include euclid.cfg]
+[include bltouch.cfg]
 # import stepper
 [include bed_stepper.cfg]
 # import heater
