--- a/hevort/macros.cfg
+++ b/hevort/macros.cfg
@@ -39,19 +39,20 @@ gcode:
     M190 S{BED_TEMP} ; wait for bed temp
     M117 Bed Tilt
     Z_TILT_ADJUST
-    M117 Bed Mesh
-    BED_MESH_CALIBRATE ;AREA_START={params.AREA_START|default("0,0")} AREA_END={params.AREA_END|default("0,0")}
-    M104 S{EXTRUDER_TEMP} ; wait for extruder temp
     M117 Homing
     G28
-    M402
+    M117 Bed Mesh
+    BED_MESH_CALIBRATE ;AREA_START={params.AREA_START|default("0,0")} AREA_END={params.AREA_END|default("0,0")}
+    SET_HEATER_TEMPERATURE HEATER=extruder TARGET={EXTRUDER_TEMP}
+    G1 X0 Y0 Z20 F18000
+    #M402
     M117 Waiting for Extruder
     M109 S{EXTRUDER_TEMP} ; wait for extruder temp
     # Prime line routine
     M117 Prime line
     STATUS_PRINTING
     G1 X0 Y0 F18000.0;  move to start
-    G0 Z0.3 ; Restore nozzle position
+    G0 Z0.3 F600 ; Restore nozzle position
     G92 E0.0 ; reset extrusion distance
     G1 E3 F1000 ; de-retract and push ooze
     G1 X0 Y2 F1000.0;  move to start
@@ -97,3 +98,9 @@ gcode:
     SET_HEATER_TEMPERATURE HEATER=heater_bed1 TARGET={BED_TEMP}
     SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={BED_TEMP}
     SET_HEATER_TEMPERATURE HEATER=extruder TARGET={EXTRUDER_TEMP}
+
+[gcode_macro RECOVER_BED]
+gcode:
+    FORCE_MOVE STEPPER=stepper_z DISTANCE=-25 VELOCITY=300 ACCEL=30
+    FORCE_MOVE STEPPER=stepper_z1 DISTANCE=-25 VELOCITY=300 ACCEL=30
+    FORCE_MOVE STEPPER=stepper_z2 DISTANCE=-25 VELOCITY=300 ACCEL=30
