--- a/hevort/printer.cfg
+++ b/hevort/printer.cfg
@@ -42,20 +42,24 @@ serial: /tmp/klipper_host_mcu
 [printer]
 kinematics: corexy
 max_velocity: 1000
-max_accel: 10000
+max_accel: 2000
 max_z_velocity: 50
 max_z_accel: 100
+
+[force_move]
+enable_force_move: true
 
 ########################################
 # Fan configuration
 ########################################
 
 [fan]
-pin: LED
-max_power: 1
-cycle_time: 0.0001# for CPAP
-hardware_pwm: false
-shutdown_speed: 0
+#pin: LED
+#max_power: 1
+#cycle_time: 0.0001# for CPAP
+#hardware_pwm: false
+#shutdown_speed: 0
+pin: HB0
 
 [heater_fan coldend_fan]
 pin: FAN0
@@ -88,6 +92,15 @@ shutdown_value: 0
 ########################################
 # chamber temp
 ########################################
+
+[temperature_sensor chamber]
+sensor_pin: rpfmex:gpio27
+sensor_type: ATC Semitec 104GT-2
+pullup_resistor: 2200
+
+[temperature_sensor rpfmex]
+sensor_type: temperature_mcu
+sensor_mcu: rpfmex
 
 #[temperature_sensor chamber]
 #sensor_type: ATC Semitec 104GT-2
