--- a/printer.cfg
+++ b/printer.cfg
@@ -1,30 +1,246 @@
+# Based on different configs from https://github.com/KevinOConnor/klipper/tree/master/config
+
+# Artist-D (310x310x400 IDEX) with STM32F1 and TMC2209
+
+# This file contains common pin mappings for MKS Robin Nano (v1.2.004)
+# boards. To use this config, the firmware should be compiled for the
+# STM32F103. When running "make menuconfig", enable "extra low-level
+# configuration setup", select the 28KiB bootloader, disable "USB for
+# communication", and select USART3 for the "Serial Port".
+
+# Note that the "make flash" command does not work with MKS Robin
+# boards. After running "make", run the following command:
+#   ./scripts/update_mks_robin.py out/klipper.bin out/Robin_nano.bin
+# Copy the file out/Robin_nano.bin to an SD card and then restart the
+# printer with that SD card.
+
 ########################################
-# Select the Printer
+# MCU and Printer configuration
 ########################################
 
-# import correct printer.cfg
-[include caribouXL.cfg]
-#[include hevort/printer.cfg]
-#[include artist.cfg]
+# import pins
+[include boards/robin_pro.cfg]
+# import macros
+[include macros.cfg]
+# import idex-macros
+[include macros_idex.cfg]
+# import mainsail
+[include mainsail.cfg]
 
-#*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	  0.027500, 0.030000, 0.025000, -0.017500, -0.180000
-#*# 	  0.022500, 0.050000, 0.067500, 0.050000, -0.070000
-#*# 	  -0.025000, 0.060000, 0.092500, 0.112500, 0.030000
-#*# 	  -0.125000, 0.010000, 0.077500, 0.105000, 0.080000
-#*# 	  -0.205000, -0.050000, 0.040000, 0.080000, 0.090000
-#*# tension = 0.2
-#*# min_x = 30.0
-#*# algo = lagrange
-#*# y_count = 5
-#*# mesh_y_pps = 2
-#*# min_y = 30.0
-#*# x_count = 5
-#*# max_y = 275.0
-#*# mesh_x_pps = 2
-#*# max_x = 275.0
+[mcu]
+serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
+restart_method: command
+
+[printer]
+kinematics: cartesian
+max_velocity: 150
+max_accel: 1000
+max_z_velocity: 25
+max_z_accel: 100
+
+[bed_screws]
+screw1: 40,40
+screw1_name: front left
+screw2: 270,40
+screw2_name: front right 
+screw3: 270,270
+screw3_name: back right 
+screw4: 40,270
+screw4_name: back left
+speed: 100.0
+
+[homing_override]
+axes: z
+set_position_z: 0
+gcode:
+   G90
+   G1 Z10 F600
+   G28 X
+   G28 Y
+   G28 Z
+   G1 Z10 F600
+
+########################################
+# Stepper and Heater configuration
+########################################
+
+[endstop_phase]
+
+[stepper_x]
+step_pin: X_STEP
+dir_pin: X_DIR
+enable_pin: !X_EN
+microsteps: 16
+rotation_distance: 40
+endstop_pin: !X_MIN
+position_min: -69.5
+position_endstop: -69.5
+position_max: 310
+homing_speed: 50
+
+[endstop_phase stepper_x]
+trigger_phase = 51/64
+
+[dual_carriage]
+axis: x
+step_pin: E2_STEP
+dir_pin: E2_DIR
+enable_pin: !E2_EN
+microsteps: 16
+rotation_distance: 40
+endstop_pin: !X_MAX
+position_min: 0
+position_endstop: 377
+position_max: 377
+homing_speed: 50
+
+[endstop_phase dual_carriage]
+trigger_phase = 21/64
+
+[stepper_y]
+step_pin: Y_STEP
+dir_pin: Y_DIR
+enable_pin: !Y_EN
+microsteps: 16
+rotation_distance: 40
+endstop_pin: !Y_MIN
+position_min: -9
+position_endstop: -9
+position_max: 305
+homing_speed: 100
+
+[endstop_phase stepper_y]
+trigger_phase = 36/64
+
+[stepper_z]
+step_pin: Z_STEP
+dir_pin: Z_DIR
+enable_pin: !Z_EN
+microsteps: 16
+rotation_distance: 8
+endstop_pin: !Z_MIN
+position_min: -2
+position_endstop: -1.6
+position_max: 350
+homing_speed: 5
+
+[endstop_phase stepper_z]
+trigger_phase = 29/64
+
+[extruder]
+step_pin: E0_STEP
+dir_pin: E0_DIR
+enable_pin: !E0_EN
+microsteps: 16
+rotation_distance: 7.8
+nozzle_diameter: 0.400
+filament_diameter: 1.750
+heater_pin: HE0
+sensor_type: ATC Semitec 104GT-2
+sensor_pin: TH0
+control: pid
+pid_Kp: 28.002
+pid_Ki: 1.287
+pid_Kd: 152.263
+min_temp: 0
+max_temp: 250
+max_extrude_only_distance: 100.0
+
+[extruder1]
+step_pin: E1_STEP
+dir_pin: !E1_DIR
+enable_pin: !E1_EN
+microsteps: 16
+rotation_distance: 7.8
+nozzle_diameter: 0.400
+filament_diameter: 1.750
+heater_pin: HE1
+sensor_type: ATC Semitec 104GT-2
+sensor_pin: TH1
+control: pid
+pid_Kp: 28.002
+pid_Ki: 1.287
+pid_Kd: 152.263
+min_temp: 0
+max_temp: 250
+max_extrude_only_distance: 100.0
+
+[heater_bed]
+heater_pin: HB0
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: TB0
+control = pid
+pid_Kp=40.068
+pid_Ki=0.279
+pid_Kd=1436.440
+min_temp: 10
+max_temp: 120
+
+########################################
+# TMC220x configuration
+########################################
+
+[tmc2209 stepper_x]
+uart_pin: X_UART
+run_current: 0.700
+hold_current: 0.500
+stealthchop_threshold: 1000
+
+[tmc2209 stepper_y]
+uart_pin: Y_UART
+run_current: 0.700
+hold_current: 0.500
+stealthchop_threshold: 1000
+
+[tmc2209 stepper_z]
+uart_pin: Z_UART
+run_current: 0.700
+hold_current: 0.500
+stealthchop_threshold: 1000
+
+[tmc2208 extruder]
+uart_pin: E0_UART
+run_current: 0.600
+hold_current: 0.400
+
+[tmc2208 extruder1]
+uart_pin: E1_UART
+run_current: 0.600
+hold_current: 0.400
+
+[tmc2209 dual_carriage]
+uart_pin: E2_UART
+run_current: 0.700
+hold_current: 0.500
+stealthchop_threshold: 1000
+
+########################################
+# Fan configuration
+########################################
+
+[fan]
+pin: FAN0
+
+[heater_fan nozzle_fan]
+pin: HE2
+heater: extruder
+heater_temp: 50.0
+fan_speed: 1.0
+
+######################################################################
+# "RepRapDiscount 128x64 Full Graphic Smart Controller" type displays
+######################################################################
+
+[display]
+lcd_type: st7920
+cs_pin: EXP1_4
+sclk_pin: EXP1_5
+sid_pin: EXP1_3
+encoder_pins: ^EXP2_3, ^EXP2_5
+click_pin: ^!EXP1_2
+#kill_pin: ^!EXP2_8
+
+[output_pin beeper]
+pin: EXP1_1
+value: 0
+shutdown_value: 0
