--- a/macros.cfg
+++ b/macros.cfg
@@ -1,5 +1,63 @@
 #from https://github.com/KevinOConnor/klipper/blob/master/config/sample-macros.cfg
 
+[gcode_macro START_PRINT_SINGLE]
+gcode:
+    {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
+    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
+    {% set BED_SIZE = params.BED_SIZE|default(4)|float|round(1) %}
+    # Reset the G-Code Z offset (adjust Z offset if needed)
+    SET_GCODE_OFFSET Z=0.0
+    # use absolute coordinates
+    G90
+    # extruder relative mode
+    M83 
+    ; Reset speed and extrusion rates
+    M220 S100
+    M221 S100
+
+    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={BED_TEMP}
+    SET_HEATER_TEMPERATURE HEATER=extruder TARGET=160; set extruder preheat temp
+
+    M117 Bed Heating
+    M190 S{BED_TEMP} ; wait for bed temp
+    M117 Homing
+    G28
+    SET_HEATER_TEMPERATURE HEATER=extruder TARGET={EXTRUDER_TEMP}
+    M117 Waiting for Extruder
+    M109 S{EXTRUDER_TEMP} ; wait for extruder temp
+    # Prime line routine
+    WIPE_T0
+    M117 Prime line
+    G1 Z5 F1000
+    G1 X55.0 Y2.0 F6000.0
+    G1 Z0.3 F1000.0
+    G92 E0.0
+    G1 X205.0 E20.0 F2200.0
+    G1 Y1.0 F1000.0
+    G1 X55.0 E20 F1400.0
+    G1 Z0.20 F1000.0
+    G1 X5.0 E4.0 F1000.0
+    G92 E0.0 ; reset extrusion distance
+    ; Final print adjustments
+    M117 Printing
+
+[gcode_macro END_PRINT]
+gcode:
+    M117 Done
+    # Turn off bed, extruder, and fan
+    TURN_OFF_HEATERS
+    M106 S0
+    # Move nozzle away from print while retracting
+    G92 E0.0
+    G1 E-0.8 F2100
+    G91
+    # Raise nozzle by 10mm
+    G1 Z10 F3000
+    G90
+    G1 X0 Y300 F18000
+    # Disable steppers
+    M84
+
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
 gcode:
