--- a/macros_idex.cfg
+++ b/macros_idex.cfg
@@ -26,14 +26,21 @@ gcode:
     G1 E2 F1800
     {% endif %}
     G90
-    G1 X-65 F3000
-    G1 X-40 F3000
-    G1 X-65 F3000
+    WIPE_T0
     RESTORE_GCODE_STATE NAME=activate0
     SET_GCODE_OFFSET X=0
     SET_GCODE_OFFSET Y=0
     SET_GCODE_OFFSET Z=0
 
+[gcode_macro WIPE_T0]
+gcode:
+    SAVE_GCODE_STATE NAME=wipe0
+    G90
+    G1 X-65 F3000
+    G1 X-40 F3000
+    G1 X-65 F3000
+    G1 X-40 F3000
+    RESTORE_GCODE_STATE NAME=wipe0
 
 [gcode_macro PARK_extruder1]
 gcode:
@@ -61,10 +68,18 @@ gcode:
     G1 E2 F1800
     {% endif %}
     G90
-    G1 X370 F3000
-    G1 X345 F3000
-    G1 X370 F3000
+    WIPE_T1
     RESTORE_GCODE_STATE NAME=activate1
     SET_GCODE_OFFSET X=0.2
     SET_GCODE_OFFSET Y=-0.25
     SET_GCODE_OFFSET Z=0
+
+[gcode_macro WIPE_T1]
+gcode:
+    SAVE_GCODE_STATE NAME=wipe1
+    G90
+    G1 X370 F3000
+    G1 X345 F3000
+    G1 X370 F3000
+    G1 X345 F3000
+    RESTORE_GCODE_STATE NAME=wipe1
