--- a/printer.cfg
+++ b/printer.cfg
@@ -1,30 +1,105 @@
+# Based on https://github.com/KevinOConnor/klipper/blob/master/config
+
+# HevORT CoreXY SKR1.4
+# JMC Servos on X and Y. Need increased Step-Pulse-Duration.
+
 ########################################
-# Select the Printer
+# MCU and Printer configuration
 ########################################
 
-# import correct printer.cfg
-[include caribouXL.cfg]
-#[include hevort/printer.cfg]
-#[include artist.cfg]
+# import pins
+[include boards/skr1_4t.cfg]
+# import macros
+[include macros.cfg]
+# import mainsail
+[include mainsail.cfg]
 
-#*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	  0.027500, 0.030000, 0.025000, -0.017500, -0.180000
-#*# 	  0.022500, 0.050000, 0.067500, 0.050000, -0.070000
-#*# 	  -0.025000, 0.060000, 0.092500, 0.112500, 0.030000
-#*# 	  -0.125000, 0.010000, 0.077500, 0.105000, 0.080000
-#*# 	  -0.205000, -0.050000, 0.040000, 0.080000, 0.090000
-#*# tension = 0.2
-#*# min_x = 30.0
-#*# algo = lagrange
-#*# y_count = 5
-#*# mesh_y_pps = 2
-#*# min_y = 30.0
-#*# x_count = 5
-#*# max_y = 275.0
-#*# mesh_x_pps = 2
-#*# max_x = 275.0
+[mcu]
+serial: /dev/serial/by-id/usb-Klipper_lpc1769_04B0001722813AAFC2386A5CC22000F5-if00
+restart_method: command
+
+[mcu expander]
+serial: /dev/serial/by-id/usb-Klipper_stm32f042x6_01001F001443303054313620-if00
+restart_method: command
+
+[mcu rpfmex]
+serial: /dev/serial/by-id/usb-Klipper_rp2040_E66138935F207B29-if00
+restart_method: command
+
+[mcu rpi]
+serial: /tmp/klipper_host_mcu
+
+# import x and y axis
+[include servos.cfg]
+# import extruder
+[include extruder.cfg]
+# import probe
+[include euclid.cfg]
+# import stepper
+[include bed_stepper.cfg]
+# import heater
+[include bed_heater.cfg]
+# import neopixel
+[include neopixel.cfg]
+
+[printer]
+kinematics: corexy
+max_velocity: 1000
+max_accel: 2000
+max_z_velocity: 50
+max_z_accel: 100
+
+[force_move]
+enable_force_move: true
+
+########################################
+# Fan configuration
+########################################
+
+[fan]
+pin: LED
+max_power: 1
+cycle_time: 0.0001# for CPAP
+hardware_pwm: false
+shutdown_speed: 0
+
+[heater_fan coldend_fan]
+pin: FAN0
+heater: extruder
+heater_temp: 50.0
+fan_speed: 1
+
+########################################
+# Display configuration
+########################################
+
+[display] # E3 Stock Display
+lcd_type: st7920
+cs_pin: EXP1_7
+sclk_pin: EXP1_6
+sid_pin: EXP1_8
+encoder_pins: ^EXP1_5, ^EXP1_3
+click_pin: ^EXP1_2
+menu_timeout: 10
+
+########################################
+# pins
+########################################
+
+[output_pin beeper]
+pin: EXP1_1
+value: 0
+shutdown_value: 0
+
+########################################
+# chamber temp
+########################################
+
+[temperature_sensor chamber]
+sensor_pin: rpfmex:gpio27
+sensor_type: ATC Semitec 104GT-2
+pullup_resistor: 2200
+
+[temperature_sensor rpfmex]
+sensor_type: temperature_mcu
+sensor_mcu: rpfmex
