wip convert to spider_2_3

--- a/bed_heater.cfg
+++ b/bed_heater.cfg
@@ -2,9 +2,9 @@
 
 [heater_bed] 
 # front left
-heater_pin: expander:PA1
+heater_pin: FAN0
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: TB0
+sensor_pin: T2
 control = pid
 pid_kp = 65.863
 pid_ki = 0.900
@@ -15,9 +15,9 @@ max_temp: 130
 [heater_generic heater_bed1]
 # front right
 gcode_id: B1
-heater_pin: expander:PA2
+heater_pin: FAN1
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: expander:PA5
+sensor_pin: T3
 control = pid
 pid_kp = 65.863
 pid_ki = 0.900
@@ -28,9 +28,9 @@ max_temp: 130
 [heater_generic heater_bed2]
 # rear right
 gcode_id: B2
-heater_pin: expander:PA3
+heater_pin: FAN2
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: TH1
+sensor_pin: T4
 control = pid
 pid_kp = 65.863
 pid_ki = 0.900
@@ -41,9 +41,9 @@ max_temp: 130
 [heater_generic heater_bed3]
 # rear left
 gcode_id: B3
-heater_pin: expander:PA0
+heater_pin: FANG
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: expander:PA6
+sensor_pin: T5
 control = pid
 pid_kp = 65.863
 pid_ki = 0.900
