--- a/bed_stepper.cfg
+++ b/bed_stepper.cfg
@@ -1,13 +1,12 @@
 # Tripple Z on virtual endstop
 
 [stepper_z]
-step_pin: rpfmex:gpio6
-dir_pin: !rpfmex:gpio5
-enable_pin: !rpfmex:gpio9
+step_pin: Z_STEP
+dir_pin: Z_DIR
+enable_pin: Z_E
 microsteps: 16
 rotation_distance: 4 				
 full_steps_per_rotation: 200
-#gear_ratio: 5.18:1
 endstop_pin: probe:z_virtual_endstop
 position_max: 315
 position_min: -20
@@ -16,37 +15,35 @@ homing_retract_speed: 5
 second_homing_speed: 2.5
 
 [tmc2209 stepper_z]
-uart_pin: rpfmex:gpio7
+uart_pin: Z_UART
 run_current: 1.000
 hold_current: 0.750
 #stealthchop_threshold: 1000
 
 [stepper_z1]
-step_pin: rpfmex:gpio1
-dir_pin: !rpfmex:gpio0
-enable_pin: !rpfmex:gpio4
+step_pin: E0_STEP
+dir_pin: E0_DIR
+enable_pin: E0_EN
 microsteps: 16
 rotation_distance: 4 				
 full_steps_per_rotation: 200
-#gear_ratio: 5.18:1
 
 [tmc2209 stepper_z1]
-uart_pin: rpfmex:gpio2
+uart_pin: E0_UART
 run_current: 1.000
 hold_current: 0.750
 #stealthchop_threshold: 1000
 
 [stepper_z2]
-step_pin: rpfmex:gpio22
-dir_pin: rpfmex:gpio21
-enable_pin: !rpfmex:gpio25
+step_pin: E1_STEP
+dir_pin: E1_DIR
+enable_pin: E1_EN
 microsteps: 16
 rotation_distance: 4 				
 full_steps_per_rotation: 200
-#gear_ratio: 5.18:1
 
 [tmc2209 stepper_z2]
-uart_pin: rpfmex:gpio23
+uart_pin: E1_UART
 run_current: 1.000
 hold_current: 0.750
 #stealthchop_threshold: 1000
