--- a/boards/spider.cfg
+++ b/boards/spider.cfg
@@ -1,4 +1,4 @@
-[board_pins spider_pins]
+[board_pins]
 aliases:
     # Steppers
     X_STEP = PE11, X_DIR = PE10, X_EN = PE9, X_UART = PE7,
@@ -30,7 +30,7 @@ aliases:
     EXP1_2 = PA8, EXP1_4 = PD2, EXP1_6 = PC12, EXP1_8 = PD1, EXP1_10 = <5V>,
     # EXP2 header
     EXP2_1 = PA7, EXP2_3 = PC6, EXP2_5 = PC7, EXP2_7 = PB10, EXP2_9 = <GND>,
-    EXP2_2 = PA5, EXP2_4 = PA4, EXP2_6 = PA6,  EXP2_8 = <RST>, EXP2_10 = <5V>
+    EXP2_2 = PA5, EXP2_4 = PA4, EXP2_6 = PA6,  EXP2_8 = <RST>, EXP2_10 = <5V>,
     
     # Interfaces
-    PI_TX = PA9, PI_RX = PA10, CAN_TX = PD1, CAN_RX = PD0, USB_TX = PA11, USB_RX = PA12,
+    PI_TX = PA9, PI_RX = PA10, CAN_TX = PD1, CAN_RX = PD0, USB_TX = PA11, USB_RX = PA12
