--- a/servos.cfg
+++ b/servos.cfg
@@ -6,7 +6,7 @@ dir_pin: X_DIR
 enable_pin: !X_EN
 microsteps: 16
 rotation_distance: 40
-endstop_pin: ^X_MIN
+endstop_pin: X_MIN
 position_min: -1
 position_endstop: 0
 position_max: 525
