--- a/extruder.cfg
+++ b/extruder.cfg
@@ -1,9 +1,9 @@
 # HextrudORT with Moons Stepper and TMC2209
 
 [extruder]
-step_pin: E0_STEP
-dir_pin: !E0_DIR
-enable_pin: !E0_EN
+step_pin: E2_STEP
+dir_pin: !E2_DIR
+enable_pin: !E2_EN
 microsteps: 8
 rotation_distance: 23.56
 gear_ratio: 50:10
@@ -12,7 +12,7 @@ filament_diameter: 1.750
 heater_pin: HE0
 sensor_type: ATC Semitec 104GT-2
 #sensor_type: PT1000
-sensor_pin: TH0
+sensor_pin: T0
 pressure_advance: 0.040
 control = pid
 pid_Kp = 43.065
@@ -25,7 +25,7 @@ max_temp: 280
 max_extrude_only_distance: 110
 
 [tmc2209 extruder]
-uart_pin: E0_UART
+uart_pin: E2_UART
 run_current: 0.500
 hold_current: 0.400
 interpolate: False
