--- a/printer.cfg
+++ b/printer.cfg
@@ -8,22 +8,14 @@
 ########################################
 
 # import pins
-[include boards/skr1_4t.cfg]
+[include boards/spider.cfg]
 # import macros
 [include macros.cfg]
 # import mainsail
 [include mainsail.cfg]
 
 [mcu]
-serial: /dev/serial/by-id/usb-Klipper_lpc1769_04B0001722813AAFC2386A5CC22000F5-if00
-restart_method: command
-
-[mcu expander]
-serial: /dev/serial/by-id/usb-Klipper_stm32f042x6_01001F001443303054313620-if00
-restart_method: command
-
-[mcu rpfmex]
-serial: /dev/serial/by-id/usb-Klipper_rp2040_E66138935F207B29-if00
+serial: /dev/ttyAMA0
 restart_method: command
 
 [mcu rpi]
@@ -64,7 +56,7 @@ hardware_pwm: false
 shutdown_speed: 0
 
 [heater_fan coldend_fan]
-pin: FAN0
+pin: FANR
 heater: extruder
 heater_temp: 50.0
 fan_speed: 1
@@ -86,20 +78,20 @@ menu_timeout: 10
 # pins
 ########################################
 
-[output_pin beeper]
-pin: EXP1_1
-value: 0
-shutdown_value: 0
+#[output_pin beeper]
+#pin: EXP1_1
+#value: 0
+#shutdown_value: 0
 
 ########################################
 # chamber temp
 ########################################
 
 [temperature_sensor chamber]
-sensor_pin: rpfmex:gpio27
+sensor_pin: T1
 sensor_type: ATC Semitec 104GT-2
 pullup_resistor: 2200
 
-[temperature_sensor rpfmex]
+[temperature_sensor spider]
 sensor_type: temperature_mcu
-sensor_mcu: rpfmex
+sensor_mcu: mcu
