wip idex macros

--- a/macros_idex.cfg
+++ b/macros_idex.cfg
@@ -1,85 +1,152 @@
-# Helper script to park the carriage (called from T0 and T1 macros)
-[gcode_macro PARK_extruder]
-gcode:
-    SAVE_GCODE_STATE NAME=park0
-    G91
-    {% if printer.extruder.temperature > 180 %}
-    G1 E-1 F1800
-    {% endif %}
-    G1 Z5
-    G90
-    G1 X-65 F6000
-    G91
-    G1 Z-5
-    RESTORE_GCODE_STATE NAME=park0
+# Macros for IDEX toolchange
 
-# Activate the primary extruder
+# Activate the left extruder
 [gcode_macro T0]
 gcode:
     SAVE_GCODE_STATE NAME=activate0
-    PARK_{printer.toolhead.extruder}
+
+    {% if printer.toolhead.position.x|float > 310.0 %}
+      {% set x_pos = 305.0 %}
+    {% elif printer.toolhead.position.x|float < 0.0 %}
+      {% set x_pos = 5.0 %}
+    {% else %}
+      {% set x_pos = printer.toolhead.position.x|float %}
+    {% endif %}
+  
+    {% if printer.toolhead.position.y|float > 305.0 %}
+      {% set y_pos = 300.0 %}
+    {% elif printer.toolhead.position.y|float < 0.0 %}
+      {% set y_pos = 0.0  %}
+    {% else %}
+      {% set y_pos = printer.toolhead.position.y|float %}
+    {% endif %}
+
+    {% if printer.toolhead.position.z|float > 350.0 %}
+      {% set z_pos = 345.0 %}
+    {% elif printer.toolhead.position.z|float < 0.0 %}
+      {% set z_pos = 0  %}
+    {% else %}
+      {% set z_pos = printer.toolhead.position.z|float %}
+    {% endif %}
+
+    G91
+    {% if printer.extruder.temperature > 180 %}
+      G1 E-2 F1800
+    {% endif %}
+    G1 Z5
+    G90
+    G1 X340 F9000    
+    WIPE_T1
+    G1 X370 F6000
+
     ACTIVATE_EXTRUDER EXTRUDER=extruder
     SET_DUAL_CARRIAGE CARRIAGE=0
-    G91
-    G1 Z2
-    {% if printer.extruder.temperature > 180 %}
-    G1 E2 F1800
-    {% endif %}
     G90
+    G1 X-35 F9000
+    {% if printer.extruder.temperature > 180 %}
+      {% set fanspeed = printer.fan.speed %}
+      M106 S255
+      G4 P2000
+      G91      
+      G1 E5 F60
+      G4 P2000
+      G1 E-.8 F1800
+      M106 S{fanspeed}
+      G90
+    {% endif %}
     WIPE_T0
+    G90
+    G1 X{x_pos} Y{y_pos} F9000
+    G1 Z{z_pos}
+    G91
+    G1 E.8 F1800
+    G90
     RESTORE_GCODE_STATE NAME=activate0
     SET_GCODE_OFFSET X=0
     SET_GCODE_OFFSET Y=0
     SET_GCODE_OFFSET Z=0
 
+# Activate the right extruder
+[gcode_macro T1]
+gcode:
+    SAVE_GCODE_STATE NAME=activate1
+    {% if printer.toolhead.position.x|float > 310.0 %}
+      {% set x_pos = 305.0 %}
+    {% elif printer.toolhead.position.x|float < 0.0 %}
+      {% set x_pos = 5.0 %}
+    {% else %}
+      {% set x_pos = printer.toolhead.position.x|float %}
+    {% endif %}
+  
+    {% if printer.toolhead.position.y|float > 305.0 %}
+      {% set y_pos = 300.0 %}
+    {% elif printer.toolhead.position.y|float < 0.0 %}
+      {% set y_pos = 0.0  %}
+    {% else %}
+      {% set y_pos = printer.toolhead.position.y|float %}
+    {% endif %}
+
+    {% if printer.toolhead.position.z|float > 350.0 %}
+      {% set z_pos = 345.0 %}
+    {% elif printer.toolhead.position.z|float < 0.0 %}
+      {% set z_pos = 0  %}
+    {% else %}
+      {% set z_pos = printer.toolhead.position.z|float %}
+    {% endif %}
+
+    G91
+    {% if printer.extruder.temperature > 180 %}
+      G1 E-2 F1800
+    {% endif %}
+    G1 Z5
+    G90
+    G1 X-35 F9000    
+    WIPE_T0
+    G1 X-65 F6000
+
+    ACTIVATE_EXTRUDER EXTRUDER=extruder1
+    SET_DUAL_CARRIAGE CARRIAGE=1
+    G90
+    G1 X340 F6000
+    {% if printer.extruder.temperature > 180 %}
+      {% set fanspeed = printer.fan.speed %}
+      M106 S255
+      G4 P2000
+      G91
+      G1 E5 F60
+      G4 P2000
+      G1 E-.8 F1800
+      M106 S{fanspeed}
+      G90
+    {% endif %}
+    WIPE_T1
+    G90
+    G1 X{x_pos} Y{y_pos} F9000
+    G1 Z{z_pos}
+    G91
+    G1 E.8 F1800
+    G90
+    RESTORE_GCODE_STATE NAME=activate1
+    SET_GCODE_OFFSET X=0.2
+    SET_GCODE_OFFSET Y=-0.25
+    SET_GCODE_OFFSET Z=-0.145
+
 [gcode_macro WIPE_T0]
 gcode:
     SAVE_GCODE_STATE NAME=wipe0
     G90
-    G1 X-65 F3000
-    G1 X-40 F3000
-    G1 X-65 F3000
-    G1 X-40 F3000
+    G1 X-65 F6000
+    G1 X-35 F6000
+    G1 X-65 F6000
+    G1 X-35 F6000
     RESTORE_GCODE_STATE NAME=wipe0
-
-[gcode_macro PARK_extruder1]
-gcode:
-    SAVE_GCODE_STATE NAME=park1
-    G91
-    {% if printer.extruder1.temperature > 180 %}
-    G1 E-1 F1800
-    {% endif %}
-    G1 Z5
-    G90
-    G1 X370 F6000
-    G91
-    G1 Z-5
-    RESTORE_GCODE_STATE NAME=park1
-
-[gcode_macro T1]
-gcode:
-    SAVE_GCODE_STATE NAME=activate1
-    PARK_{printer.toolhead.extruder}
-    ACTIVATE_EXTRUDER EXTRUDER=extruder1
-    SET_DUAL_CARRIAGE CARRIAGE=1
-    G91
-    G1 Z2
-    {% if printer.extruder.temperature > 180 %}
-    G1 E2 F1800
-    {% endif %}
-    G90
-    WIPE_T1
-    RESTORE_GCODE_STATE NAME=activate1
-    SET_GCODE_OFFSET X=0.2
-    SET_GCODE_OFFSET Y=-0.25
-    SET_GCODE_OFFSET Z=0
 
 [gcode_macro WIPE_T1]
 gcode:
     SAVE_GCODE_STATE NAME=wipe1
     G90
-    G1 X370 F3000
-    G1 X345 F3000
-    G1 X370 F3000
-    G1 X345 F3000
+    G1 X370 F6000
+    G1 X340 F6000
+    G1 X370 F6000
+    G1 X340 F6000
     RESTORE_GCODE_STATE NAME=wipe1
