--- a/printer.cfg
+++ b/printer.cfg
@@ -31,12 +31,32 @@
 serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
 restart_method: command
 
+[mcu skr]
+serial: /dev/serial/by-id/usb-Klipper_lpc1769_04B0001722813AAFC2386A5CC22000F5-if00
+restart_method: command
+
 [printer]
 kinematics: cartesian
 max_velocity: 150
 max_accel: 1000
 max_z_velocity: 25
 max_z_accel: 100
+
+########################################
+# Probe and Leveling configuration
+########################################
+
+[bltouch]
+sensor_pin: ^skr: P0.10
+control_pin: skr: P2.0
+x_offset: 35
+y_offset: 5
+#z_offset: 2
+stow_on_each_sample: False
+speed: 20
+samples: 5
+sample_retract_dist: 1
+samples_result: median
 
 [bed_screws]
 screw1: 40,40
@@ -48,6 +68,32 @@ screw3_name: back right
 screw4: 40,270
 screw4_name: back left
 speed: 100.0
+
+[screws_tilt_adjust]
+#screw1: 40,40
+screw1: 5,35
+screw1_name: front left
+#screw2: 270,40
+screw2: 235,35
+screw2_name: front right 
+#screw3: 270,270
+screw3: 235,265
+screw3_name: back right 
+#screw4: 40,270
+screw4: 5,265
+screw4_name: back left
+speed: 150.0
+horizontal_move_z: 7
+screw_thread: CW-M5
+
+[bed_mesh]
+speed: 180
+mesh_min: 30,30
+mesh_max: 275,275
+probe_count: 6,6
+fade_start: 1.0
+fade_end: 0
+horizontal_move_z: 7
 
 [homing_override]
 axes: z
@@ -120,7 +166,7 @@ microsteps: 16
 rotation_distance: 8
 endstop_pin: !Z_MIN
 position_min: -2
-position_endstop: -1.6
+#position_endstop: -1.6
 position_max: 350
 homing_speed: 5
 
@@ -244,3 +290,32 @@ click_pin: ^!EXP1_2
 pin: EXP1_1
 value: 0
 shutdown_value: 0
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [stepper_z]
+#*# position_endstop = -1.610
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  0.405000, 0.345000, 0.250000, 0.240000, 0.295000, 0.487500
+#*# 	  0.520000, 0.420000, 0.277500, 0.292500, 0.382500, 0.500000
+#*# 	  0.482500, 0.405000, 0.255000, 0.275000, 0.357500, 0.410000
+#*# 	  0.480000, 0.380000, 0.272500, 0.265000, 0.302500, 0.425000
+#*# 	  0.475000, 0.380000, 0.307500, 0.335000, 0.370000, 0.482500
+#*# 	  0.442500, 0.420000, 0.267500, 0.362500, 0.375000, 0.462500
+#*# tension = 0.2
+#*# min_x = 30.0
+#*# algo = lagrange
+#*# y_count = 6
+#*# mesh_y_pps = 2
+#*# min_y = 30.0
+#*# x_count = 6
+#*# max_y = 275.0
+#*# mesh_x_pps = 2
+#*# max_x = 275.0
+#*#
+#*# [bltouch]
+#*# z_offset = 0.950
