--- a/printer.cfg
+++ b/printer.cfg
@@ -53,7 +53,7 @@ x_offset: 35
 y_offset: 5
 #z_offset: 2
 stow_on_each_sample: False
-speed: 20
+speed: 5
 samples: 5
 sample_retract_dist: 1
 samples_result: median
@@ -297,15 +297,38 @@ shutdown_value: 0
 #*# [stepper_z]
 #*# position_endstop = -1.610
 #*#
-#*# [bed_mesh default]
+#*# [bltouch]
+#*# z_offset = 0.950
+#*#
+#*# [bed_mesh PLA]
 #*# version = 1
 #*# points =
-#*# 	  0.405000, 0.345000, 0.250000, 0.240000, 0.295000, 0.487500
-#*# 	  0.520000, 0.420000, 0.277500, 0.292500, 0.382500, 0.500000
-#*# 	  0.482500, 0.405000, 0.255000, 0.275000, 0.357500, 0.410000
-#*# 	  0.480000, 0.380000, 0.272500, 0.265000, 0.302500, 0.425000
-#*# 	  0.475000, 0.380000, 0.307500, 0.335000, 0.370000, 0.482500
-#*# 	  0.442500, 0.420000, 0.267500, 0.362500, 0.375000, 0.462500
+#*# 	  0.352500, 0.207500, 0.172500, 0.165000, 0.252500, 0.387500
+#*# 	  0.492500, 0.335000, 0.255000, 0.260000, 0.337500, 0.412500
+#*# 	  0.440000, 0.342500, 0.210000, 0.197500, 0.267500, 0.352500
+#*# 	  0.372500, 0.267500, 0.272500, 0.192500, 0.280000, 0.355000
+#*# 	  0.397500, 0.332500, 0.252500, 0.217500, 0.360000, 0.447500
+#*# 	  0.357500, 0.342500, 0.190000, 0.242500, 0.295000, 0.412500
+#*# tension = 0.2
+#*# mesh_x_pps = 2
+#*# algo = lagrange
+#*# min_x = 30.0
+#*# min_y = 30.0
+#*# y_count = 6
+#*# mesh_y_pps = 2
+#*# x_count = 6
+#*# max_x = 275.0
+#*# max_y = 275.0
+#*#
+#*# [bed_mesh PETG]
+#*# version = 1
+#*# points =
+#*# 	  0.485000, 0.342500, 0.272500, 0.245000, 0.350000, 0.512500
+#*# 	  0.627500, 0.437500, 0.295000, 0.337500, 0.370000, 0.547500
+#*# 	  0.542500, 0.402500, 0.270000, 0.272500, 0.365000, 0.372500
+#*# 	  0.517500, 0.322500, 0.285000, 0.230000, 0.302500, 0.457500
+#*# 	  0.572500, 0.420000, 0.295000, 0.322500, 0.407500, 0.540000
+#*# 	  0.510000, 0.407500, 0.332500, 0.312500, 0.450000, 0.552500
 #*# tension = 0.2
 #*# min_x = 30.0
 #*# algo = lagrange
@@ -316,6 +339,3 @@ shutdown_value: 0
 #*# max_y = 275.0
 #*# mesh_x_pps = 2
 #*# max_x = 275.0
-#*#
-#*# [bltouch]
-#*# z_offset = 0.950
