--- a/macros.cfg
+++ b/macros.cfg
@@ -61,9 +61,10 @@ gcode:
     M117 Homing
     G28
 
+    M117 Activate T0
+    T0
     M117 Waiting for Extruder T0
     M109 S{EXTRUDER_TEMP} ; wait for extruder temp
-    T0
     # Prime line routine
     M117 Prime line T0
     G1 Z5 F1000
@@ -76,10 +77,13 @@ gcode:
     G1 Z0.20 F1000.0
     G1 X5.0 E4.0 F1000.0
     G92 E0.0 ; reset extrusion distance
+    G1 Z5 F1000
 
+    M117 Activate T1
+    T1
     M117 Waiting for Extruder T1
     M109 S{EXTRUDER1_TEMP} ; wait for extruder temp
-    T1
+
     # Prime line routine
     M117 Prime line T1
     G1 Z5 F1000
@@ -92,10 +96,8 @@ gcode:
     G1 Z0.20 F1000.0
     G1 X5.0 E4.0 F1000.0
     G92 E0.0 ; reset extrusion distance
-
     G1 Z5
-    M83; relative extrusion
-    G92 E0.0 ; reset extrusion distance
+
     M117 Print in progress
 
 
@@ -105,7 +107,7 @@ gcode:
     G4
     # Move nozzle away from print while retracting
     G92 E0.0
-    G1 E-0.8 F2100
+    G1 E-01.2 F1800
     G91
     G1 X-0.5 Y-0.5 F1200
     G1 X1 Y1 F1200
@@ -125,25 +127,16 @@ gcode:
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
 gcode:
-	{% set X = params.X|default(0)|float %}
-    {% set Y = params.Y|default(305)|float %}
-    {% set Z = params.Z|default(10)|float %}
-    {% set E = params.E|default(1)|float %}
     SAVE_GCODE_STATE NAME=PAUSE_state
     BASE_PAUSE
     G91
-    G1 E-{E} F2100
-    G1 Z{Z}
+    G1 Z5
     G90
-    G1 X{X} Y{Y} F6000
+    G1 X150 Y0 F9000
 
 [gcode_macro RESUME]
 rename_existing: BASE_RESUME
 gcode:
-    {% set E = params.E|default(1)|float %}
-	G91
-    G1 E{E} F2100
-    G90
     RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
     BASE_RESUME
 
