--- a/macros_idex.cfg
+++ b/macros_idex.cfg
@@ -1,19 +1,58 @@
 # Macros for IDEX toolchange
 
+# Positions for parking and priming
+[gcode_macro GoParkT0]
+gcode:
+    {% set FEED = params.FEED|default(6000)|float %}
+    G90
+    G1 X-65 F{FEED}
+
+[gcode_macro GoWipeT0]
+gcode:
+    {% set FEED = params.FEED|default(6000)|float %}
+    G90
+    G1 X-30 F{FEED}
+
+[gcode_macro GoParkT1]
+gcode:
+    {% set FEED = params.FEED|default(6000)|float %}
+    G90
+    G1 X375 F{FEED}
+
+[gcode_macro GoWipeT1]
+gcode:
+    {% set FEED = params.FEED|default(6000)|float %}
+    G90
+    G1 X340 F{FEED}
+
+[gcode_macro PurgeExtruder]
+gcode:
+    {% if printer.extruder.temperature > 180 %}
+      {% set fanspeed = printer.fan.speed %}
+      M106 S255
+      G4 P2000
+      G91      
+      G1 E3 F1800
+      G1 E5 F60
+      G4 P2000
+      G1 E-1.2 F1800
+      M106 S{fanspeed}
+      G90
+    {% endif %}
+
 # Activate the left extruder
 [gcode_macro T0]
 gcode:
     SAVE_GCODE_STATE NAME=activate0
-
-    {% if printer.toolhead.position.x|float > 310.0 %}
-      {% set x_pos = 305.0 %}
-    {% elif printer.toolhead.position.x|float < 0.0 %}
+    {% if printer.toolhead.position.x|float > 300.0 %}
+      {% set x_pos = 300.0 %}
+    {% elif printer.toolhead.position.x|float < 5.0 %}
       {% set x_pos = 5.0 %}
     {% else %}
       {% set x_pos = printer.toolhead.position.x|float %}
     {% endif %}
   
-    {% if printer.toolhead.position.y|float > 305.0 %}
+    {% if printer.toolhead.position.y|float > 300.0 %}
       {% set y_pos = 300.0 %}
     {% elif printer.toolhead.position.y|float < 0.0 %}
       {% set y_pos = 0.0  %}
@@ -21,7 +60,7 @@ gcode:
       {% set y_pos = printer.toolhead.position.y|float %}
     {% endif %}
 
-    {% if printer.toolhead.position.z|float > 350.0 %}
+    {% if printer.toolhead.position.z|float > 345.0 %}
       {% set z_pos = 345.0 %}
     {% elif printer.toolhead.position.z|float < 0.0 %}
       {% set z_pos = 0  %}
@@ -30,37 +69,23 @@ gcode:
     {% endif %}
 
     G91
-    {% if printer.extruder.temperature > 180 %}
-      G1 E-2 F1800
-    {% endif %}
     G1 Z5
-    G90
-    G1 X340 F9000    
-    WIPE_T1
-    G1 X370 F6000
+
+    {% if printer.toolhead.extruder == 'extruder1' %}
+      G90
+      GoWipeT1 FEED=10800 
+      WIPE_T1
+    {% endif %}
 
     ACTIVATE_EXTRUDER EXTRUDER=extruder
     SET_DUAL_CARRIAGE CARRIAGE=0
     G90
-    G1 X-35 F9000
-    {% if printer.extruder.temperature > 180 %}
-      {% set fanspeed = printer.fan.speed %}
-      M106 S255
-      G4 P2000
-      G91      
-      G1 E5 F60
-      G4 P2000
-      G1 E-.8 F1800
-      M106 S{fanspeed}
-      G90
-    {% endif %}
+    GoParkT0 FEED=10800 
+    PurgeExtruder
     WIPE_T0
     G90
-    G1 X{x_pos} Y{y_pos} F9000
+    G1 X{x_pos} Y{y_pos} F10800
     G1 Z{z_pos}
-    G91
-    G1 E.8 F1800
-    G90
     RESTORE_GCODE_STATE NAME=activate0
     SET_GCODE_OFFSET X=0
     SET_GCODE_OFFSET Y=0
@@ -70,15 +95,15 @@ gcode:
 [gcode_macro T1]
 gcode:
     SAVE_GCODE_STATE NAME=activate1
-    {% if printer.toolhead.position.x|float > 310.0 %}
-      {% set x_pos = 305.0 %}
-    {% elif printer.toolhead.position.x|float < 0.0 %}
+    {% if printer.toolhead.position.x|float > 300.0 %}
+      {% set x_pos = 300.0 %}
+    {% elif printer.toolhead.position.x|float < 5.0 %}
       {% set x_pos = 5.0 %}
     {% else %}
       {% set x_pos = printer.toolhead.position.x|float %}
     {% endif %}
   
-    {% if printer.toolhead.position.y|float > 305.0 %}
+    {% if printer.toolhead.position.y|float > 300.0 %}
       {% set y_pos = 300.0 %}
     {% elif printer.toolhead.position.y|float < 0.0 %}
       {% set y_pos = 0.0  %}
@@ -86,7 +111,7 @@ gcode:
       {% set y_pos = printer.toolhead.position.y|float %}
     {% endif %}
 
-    {% if printer.toolhead.position.z|float > 350.0 %}
+    {% if printer.toolhead.position.z|float > 345.0 %}
       {% set z_pos = 345.0 %}
     {% elif printer.toolhead.position.z|float < 0.0 %}
       {% set z_pos = 0  %}
@@ -95,37 +120,23 @@ gcode:
     {% endif %}
 
     G91
-    {% if printer.extruder.temperature > 180 %}
-      G1 E-2 F1800
-    {% endif %}
     G1 Z5
-    G90
-    G1 X-35 F9000    
-    WIPE_T0
-    G1 X-65 F6000
+
+    {% if printer.toolhead.extruder == 'extruder' %}
+      G90
+      GoWipeT0 FEED=10800 
+      WIPE_T0
+    {% endif %}
 
     ACTIVATE_EXTRUDER EXTRUDER=extruder1
     SET_DUAL_CARRIAGE CARRIAGE=1
     G90
-    G1 X340 F6000
-    {% if printer.extruder.temperature > 180 %}
-      {% set fanspeed = printer.fan.speed %}
-      M106 S255
-      G4 P2000
-      G91
-      G1 E5 F60
-      G4 P2000
-      G1 E-.8 F1800
-      M106 S{fanspeed}
-      G90
-    {% endif %}
+    GoParkT1 FEED=10800 
+    PurgeExtruder
     WIPE_T1
     G90
-    G1 X{x_pos} Y{y_pos} F9000
+    G1 X{x_pos} Y{y_pos} F10800
     G1 Z{z_pos}
-    G91
-    G1 E.8 F1800
-    G90
     RESTORE_GCODE_STATE NAME=activate1
     SET_GCODE_OFFSET X=0.2
     SET_GCODE_OFFSET Y=-0.25
@@ -135,18 +146,16 @@ gcode:
 gcode:
     SAVE_GCODE_STATE NAME=wipe0
     G90
-    G1 X-65 F6000
-    G1 X-35 F6000
-    G1 X-65 F6000
-    G1 X-35 F6000
+    GoParkT0
+    GoWipeT0
+    GoParkT0
     RESTORE_GCODE_STATE NAME=wipe0
 
 [gcode_macro WIPE_T1]
 gcode:
     SAVE_GCODE_STATE NAME=wipe1
     G90
-    G1 X370 F6000
-    G1 X340 F6000
-    G1 X370 F6000
-    G1 X340 F6000
+    GoParkT1
+    GoWipeT1
+    GoParkT1
     RESTORE_GCODE_STATE NAME=wipe1
