--- a/bed_heater.cfg
+++ b/bed_heater.cfg
@@ -2,51 +2,51 @@
 
 [heater_bed] 
 # front left
-heater_pin: FAN0
+heater_pin: HE2
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: T2
+sensor_pin: T0
 control = pid
-pid_kp = 65.863
-pid_ki = 0.900
-pid_kd = 1205.302
+pid_kp = 48.397
+pid_ki = 1.613
+pid_kd = 362.974
 min_temp: 10
 max_temp: 130
 
 [heater_generic heater_bed1]
-# front right
+# rear left
 gcode_id: B1
-heater_pin: FAN1
+heater_pin: HB0
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: T3
+sensor_pin: T1
 control = pid
-pid_kp = 65.863
-pid_ki = 0.900
-pid_kd = 1205.302
+pid_kp = 48.397
+pid_ki = 1.613
+pid_kd = 362.974
 min_temp: 10
 max_temp: 130
 
 [heater_generic heater_bed2]
 # rear right
 gcode_id: B2
-heater_pin: FAN2
+heater_pin: HE0
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: T4
+sensor_pin: T2
 control = pid
-pid_kp = 65.863
-pid_ki = 0.900
-pid_kd = 1205.302
+pid_kp = 48.397
+pid_ki = 1.613
+pid_kd = 362.974
 min_temp: 10
 max_temp: 130
 
 [heater_generic heater_bed3]
 # rear left
 gcode_id: B3
-heater_pin: FANG
+heater_pin: HE1
 sensor_type: EPCOS 100K B57560G104F
-sensor_pin: T5
+sensor_pin: T3
 control = pid
-pid_kp = 65.863
-pid_ki = 0.900
-pid_kd = 1205.302
+pid_kp = 48.397
+pid_ki = 1.613
+pid_kd = 362.974
 min_temp: 10
 max_temp: 130
